# carplay_poc

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  channel.hpp  chatgpt_audio.js  command_list.json  minihttpd.cpp  minihttpd.h
.scratch/pristine_20260325_2/sdk-ameba-v5.2g_gcc/component/common/example/high_load_memory_use/: example_high_load_memory_use.c
.scratch/pristine_20260325_2/sdk-ameba-v5.2g_gcc/project/realtek_amebapro_v0_example/GCC-RELEASE/: application.is.mk
.scratch/pristine_20260325_2/sdk-ameba-v5.2g_gcc/project/realtek_amebapro_v0_example/inc/: platform_opts.h
ameba/: example_httpd.c  freertos.c  httpd.cpp  parse_audio.c
ameba/sys_include/: FreeRTOS.h  platform_stdlib.h
ameba/sys_include/httpd/: httpd.h
ameba_gateway/: example_gateway_ameba.c  example_gateway_ameba.h
docs/: amebapro_sdk_notes.md
gateway/: CMakeLists.txt  gateway.c  tcp_transport.c  tcp_transport.h  ws_upstream_client.c  ws_upstream_client.h
gateway_client/: CMakeLists.txt  gateway_client.cpp  transport.c  transport.h  transport_libusb.c
genbin/: genbin.cpp
htdocs/: main.html
htdocs/css/: ai_canvas.css  cover.css
htdocs/js/: ai_player.js  config.js  env.js  main.js  main_hands_player.js  menu.js  player.js  snapshot.js  yuv_canvas.js
htdocs_archive/: 2023_computex.tgz
htdocs_full/: 2024ces.html  about.html  bg_light.html  chat_gpt.html  config.html  eneural_dms.html  face_fusion.html  face_tracking.html  face_wakeup.html  facial_recognition.html  hand_gesture.html  hybrid.html  image_classification.html  index.html  main.html  main_icons.html  main_text.html  motion+object_detection.html  motion_detection.html  multi_tracking.html  music.html  object_detection.html  pure_video_demo.html  record_video.html  single_tracking.html  sound_events.html
htdocs_full/js/: about.js  ai_param.js  ai_player.js  chatgpt_audio.js  create_bl_player.js  create_facial_recognition_player.js  create_facial_recognition_player_plumerai.js  create_ft_player.js  create_hands_player.js  create_hybrid_player.js  create_md+od_player.js  create_md_player.js  create_multi_tracking_player.js  create_od_player.js  create_od_sound_player.js  create_roi_player.js  create_sb_player.js  create_se_player.js  create_single_tracking_player.js  create_sound_player.js  create_video_player.js  crypto_stream.js  decoder.js  facial_cb.js  plumerai_ai_player.js
ministd/: avl_bf.c  avl_bf.h  mylist.hpp  mymap.hpp  mypair.hpp  mystring.hpp  myvector.hpp
scripts/: ameba_newlib_compat.c  ameba_sdk_tool_proxy.sh  build_ameba_firmware.sh  build_ameba_firmware_wsl.sh  checksum.macos  elf2bin.macos  package_source_release.ps1  package_windows_demo.ps1  package_windows_test_release.ps1
tools/: .gitattributes
ws_server/: .gitignore  CMakeLists.txt  SPEC.md  config.json
ws_server/from_scratch/: CMakeLists.txt  SPEC.md
ws_server/from_scratch/docs/: wsfs_overview.md
ws_server/from_scratch/examples/: CMakeLists.txt  wsfs_echo_server.c  wsfs_selftest.c
ws_server/from_scratch/include/: wsfs_server.h  wsfs_socket.h
ws_server/from_scratch/src/: wsfs_connection.c  wsfs_frame_reader.c  wsfs_internal.h  wsfs_mem.c  wsfs_server.c
ws_server/from_scratch/tests/: CMakeLists.txt  Makefile  README.md  client.js  wsfs_c2c_stress.c  wsfs_c_js_client_stress.c  wsfs_echo_integration.c  wsfs_frame_reader_tests.c  wsfs_handshake_tests.c  wsfs_js_server_stress.c  wsfs_send_queue_tests.c
ws_server/from_scratch/tests/artifacts/: report.json
ws_server/from_scratch/tests/artifacts/reports/: c2c_concurrent_c1.json  c2c_concurrent_c2.json  c2c_concurrent_c3.json  c2c_concurrent_c4.json  c2c_sequential_c1.json  c2c_sequential_c2.json  c2c_sequential_c3.json  c2c_sequential_c4.json  c_server_concurrent_c1.json  c_server_concurrent_c2.json  c_server_concurrent_c3.json  c_server_concurrent_c4.json  c_server_sequential_c1.json  c_server_sequential_c2.json  c_server_sequential_c3.json  c_server_sequential_c4.json  js_client_concurrent_c1.json  js_client_concurrent_c2.json  js_client_concurrent_c3.json  js_client_concurrent_c4.json  js_client_sequential_c1.json  js_client_sequential_c2.json  js_client_sequential_c3.json  js_client_sequential_c4.json  js_client_stress_concurrent_c1.json  js_client_stress_concurrent_c2.json  js_client_stress_concurrent_c3.json  js_client_stress_concurrent_c4.json  js_client_stress_sequential_c1.json  js_client_stress_sequential_c2.json  js_client_stress_sequential_c3.json  js_client_stress_sequential_c4.json  js_server_concurrent_c1.json  js_server_concurrent_c2.json  js_server_concurrent_c3.json  js_server_concurrent_c4.json  js_server_sequential_c1.json  js_server_sequential_c2.json  js_server_sequential_c3.json  js_server_sequential_c4.json
ws_server/from_scratch/tests/js/: package-lock.json  package.json
ws_server/from_scratch/tests/js/src/: client.js  server.js  user_client.js
ws_server/from_scratch/tests/scripts/: run_all_tests.py
ws_server/gateway/: gateway.c  tcp_transport.h  ws_upstream_client.c  ws_upstream_client.h
ws_server/gateway_client/: gateway_client.cpp  transport.c  transport.h  transport_libusb.c
ws_server/gen_test_move/: gen_test_move.cpp
ws_server/include/: gateway_proto.h  ws.h
ws_server/src/: gateway_proto.c  ws.c
ws_server/test_data/: ameba_pro_640_360.h264  detect.json  hand.json  iphone.h264  iphone_baseline.h264  oid.json  palm_video.h264  wsh264
ws_server/tests/: crypto_proto_tests.c  crypto_stream_js_test.js
ws_server/wsh264/: mystring.hpp  myvector.hpp  osd.cpp  wsh264.cpp
wsh264/: CMakeLists.txt  config.json
wsh264/app/: bitrate_ctrl.c  bitrate_ctrl.h  char_queue.cpp  char_queue.h  ffmpeg_encode.cpp  hexdump.cpp  osd.cpp  osd.h  wsh264.cpp
wsh264/include/: crypto_stream.h
wsh264/src/: crypto_stream.c  ws.c  ws_wsfs_compat.c
wsh264/test_data/: sound.raw
